--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>
 My name is Ang Wei En. I am a student of Dunman High School. </p>
 <p>
-Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>. </p>
+Here’s our school website link <a href ="/www.dhs.sg"> Dunman High School  </a>. </p>
 <br>
 <p>Here are the things I love to do the most : </p> 
 <ul>
