--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ Here’s our school website link <a href ="/www.dhs.sg"> Dunman High School  </a
 <h2> My achievements</h2>
   <ul></ul>
   </p>
-<p><a href="/test.html"> /Test page </a> </p>
+<p><a href="/test.html"> Test page </a> </p>
 </body>
 </html>
