--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@ Here’s our school website link <a href ="/www.dhs.sg"> Dunman High School  </a
   <ul></ul>
   </p>
 <p><a href="/test.html"> Test page </a> </p>
+<p><a href="/cca.html">CCA Page</a>
 </body>
 </html>
